[package]
name = "ostree-repo"
version = "0.1.0"
authors = ["William Manley <will@stb-tester.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gvariant = "0.4"
openat = "0.1"
hex = "0.4"
itertools = "0.9"
ref-cast = "1.0"
memchr = { version = "2", default-features = false }
xattr = "0.2"

[dev-dependencies]
tempfile = "3.1"
tar = "0.4"